add authentication and authorization with permission requests.

--- a/.test.env
+++ b/.test.env
@@ -10,7 +10,7 @@ OAUTH_GOOGLE_REDIRECT_URL=http://localhost:3005/auth/google/callback
 MYSQL_USERNAME=admin
 MYSQL_PASSWORD=admin
 MYSQL_ROOT_PASSWORD=password
-MYSQL_DB_NAME=dev_db
+MYSQL_DB_NAME=test_db
 MYSQL_HOST=localhost
 MYSQL_PORT=3366
 RUNNING_MECHINE_URL=http://localhost
